--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "decode-jwt": "^1.0.2",
+    "html5-qrcode": "^2.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
