--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
     "decode-jwt": "^1.0.2",
     "html5-qrcode": "^2.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
